# ease-proc

./: .gitattributes  .gitignore  README.md  rust-toolchain.toml
src/: console.css  console.html  console.js  fonts.css  index.css  index.html  index.js  toast.js
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  local_host_monitor.rs  local_process_monitor.rs  logging.rs  main.rs  monitor.rs  monitor_manager.rs  process_guard.rs  process_sampler.rs  remote_host_monitor.rs
