[package]
name = "ease-proc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "=0.29.11"
winapi = { version = "0.3.9", features = ["winbase", "jobapi2"] }
tokio = { version = "=1.28.2", features = ["rt", "rt-multi-thread", "macros", "time", "process", "io-util"] }
parking_lot = "=0.11.2"
anyhow = "1.0.94"
chrono = "=0.4.31"
chardetng = "0.1.17"
encoding_rs = "0.8"
ssh2 = "0.9.4"
rusqlite = {version = "=0.29.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "=0.22.0"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["fmt", "env-filter", "chrono"] }

# 为 1.77.2 兼容 (win7兼容)
globset = "=0.4.16"
# image = "=0.24.0"
# idna_adapter = "=1.2.0"
# native-tls = "=0.2.12"
# litemap = "=0.7.4"
# indexmap = "=2.11.0"
# rayon = "=1.10.0"
# rayon-core = "=1.12.1"
# zerofrom = "=0.1.5"
# exr = "=1.71.0"
# time = "=0.3.2"
notify-rust = "=4.8.0"
os_info = "=3.8.2"
filetime = "=0.2.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
